--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Sarabun&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -15,9 +16,9 @@
     <!-- navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-dark bg-navbar">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="home.html">
                 <img class="logo-codecamp" src="assets/img/Logo-codecamp-2.png" width="40" height="40"
-                    class="d-inline-block align-top" alt="">
+                    class="d-inline-block align-top" alt="codecamp">
                 CodeCamp
             </a>
 
@@ -29,14 +30,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="news.html">News</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="#">Contact me</a>
+                    </li> -->
                 </ul>
             </div>
         </div>
