--- a/home.html
+++ b/home.html
@@ -35,9 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="news.html">News</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Contact me</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="studen_only.html">Studen Only</a>
+                    </li>
                 </ul>
             </div>
         </div>
