--- a/demo_day.html
+++ b/demo_day.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Demo Day and Speed Dating</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Sarabun&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
