create margin page

--- a/demo_day.html
+++ b/demo_day.html
@@ -59,14 +59,14 @@
                     <p class="lead"><strong>เรียน</strong> สมาชิกทุกท่าน</p>
                     <p class="lead"><strong>เรื่อง</strong> แจ้งรายรายละเอียดงาน Demo Day and Speed Dating</p>
                     <p class="lead">
-                        ตามที่โครงการ Codecamp 4 ที่ได้แจ้งกำหนดการของงาน Demo Day and Speed Dating ของนักเรียนในโครงการ Codecamp 4 
+                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbspตามที่โครงการ Codecamp 4 ที่ได้แจ้งกำหนดการของงาน Demo Day and Speed Dating ของนักเรียนในโครงการ Codecamp 4 
                         กับสมาชิกทุกท่านไปแล้วนั้น ทางโครงการจะขอแจ้งเปลี่ยนแปลงวันและเวลา ในการจัดงาน Demo Day and Speed Dating 
                         จากเดิมวันที่ 31 มกราคม 2563 เป็น วันที่ 3 กุมภาพันธ์ 2563 โดยสถานที่จัดงานคือ 
                         เขตอุตสาหกรรมซอฟต์แวร์ประเทศไทย 99 31 หมู่ 4 ถนนแจ้งวัฒนะ ตำบลคลองเกลือ อำเภอปากเกร็ด จังหวัดนนทบุรี 
                         โดยมีกำหนดการตามเอกสารแนบที่ส่งให้
                     </p>
                     <br>
-                    <p class="lead"><a href="https://drive.google.com/file/d/1A8xGwSATpQUHAVw6p8SkEtE6DHQIjSYl/view?usp=sharing" target="_blank">Link Download Document</a></p>
+                    <p class="lead"><a class="download-document" href="https://drive.google.com/file/d/1A8xGwSATpQUHAVw6p8SkEtE6DHQIjSYl/view?usp=sharing" target="_blank">Link Download Document</a></p>
                     <br>
                     <p class="lead">จึงเรียนมาเพื่อโปรดทราบ</p>
                 </div>
