--- a/studen_only.html
+++ b/studen_only.html
@@ -57,117 +57,16 @@
             <div class="col-12 col-sm-6 col-md-4 p-2">
                 <div class="card h-100">
                     <a href="demo_day.html" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="assets/img/แจ้งเพื่อทราบ.png"
-                            alt="Card image cap">
+                        <img class="card-img-top" src="assets/img/แจ้งเพื่อทราบ.png" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text">ตามที่โครงการ Codecamp 4 ที่ได้แจ้งกำหนดการของงาน Demo Day and Speed Dating ของนักเรียนในโครงการ Codecamp 4 
+                        <p class="card-text">ตามที่โครงการ Codecamp 4 ที่ได้แจ้งกำหนดการของงาน Demo Day and Speed Dating
+                            ของนักเรียนในโครงการ Codecamp 4
                             กับสมาชิกทุกท่านไปแล้วนั้น
                         </p>
                     </div>
                     <div class="p-3">
                         <a href="demo_day.html" class="btn btn-primary btn-block">อ่านเพิ่มเติม</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ข้อที่ 2 -->
-            <div class="col-12 col-sm-6 col-md-4 p-2">
-                <div class="card h-100">
-                    <a href="#" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="p-3">
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ข้อที่ 3 -->
-            <div class="col-12 col-sm-6 col-md-4 p-2">
-                <div class="card h-100">
-                    <a href="#" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="p-3">
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ข้อที่ 4 -->
-            <div class="col-12 col-sm-6 col-md-4 p-2">
-                <div class="card h-100">
-                    <a href="#" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="p-3">
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ข้อที่ 5 -->
-            <div class="col-12 col-sm-6 col-md-4 p-2">
-                <div class="card h-100">
-                    <a href="#" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="p-3">
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ข้อที่ 6 -->
-            <div class="col-12 col-sm-6 col-md-4 p-2">
-                <div class="card h-100">
-                    <a href="#" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="p-3">
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
                     </div>
                 </div>
             </div>
