--- a/demo_day.html
+++ b/demo_day.html
@@ -66,7 +66,10 @@
                         โดยมีกำหนดการตามเอกสารแนบที่ส่งให้
                     </p>
                     <br>
-                    <p class="lead"><a class="download-document" href="https://drive.google.com/file/d/1A8xGwSATpQUHAVw6p8SkEtE6DHQIjSYl/view?usp=sharing" target="_blank">Link Download Document</a></p>
+                    <a href="https://drive.google.com/file/d/1A8xGwSATpQUHAVw6p8SkEtE6DHQIjSYl/view?usp=sharing" target="_blank">
+                        <button type="button" class="btn btn-primary"> Read Document here</button>
+                    </a>
+                    <br>
                     <br>
                     <p class="lead">จึงเรียนมาเพื่อโปรดทราบ</p>
                 </div>
