--- a/news.html
+++ b/news.html
@@ -53,7 +53,7 @@
     <!-- card news -->
     <div class="container">
         <div class="row">
-            <!-- ข้อที่ 1  -->
+            <!-- ข่าวที่ 1   -->
             <div class="col-12 col-sm-6 col-md-4 p-2">
                 <div class="card h-100">
                     <a href="demo_day.html" class="warpper-card-img">
@@ -72,106 +72,7 @@
                 </div>
             </div>
 
-            <!-- ข้อที่ 2 -->
-            <div class="col-12 col-sm-6 col-md-4 p-2">
-                <div class="card h-100">
-                    <a href="#" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="p-3">
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ข้อที่ 3 -->
-            <div class="col-12 col-sm-6 col-md-4 p-2">
-                <div class="card h-100">
-                    <a href="#" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="p-3">
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ข้อที่ 4 -->
-            <div class="col-12 col-sm-6 col-md-4 p-2">
-                <div class="card h-100">
-                    <a href="#" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="p-3">
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ข้อที่ 5 -->
-            <div class="col-12 col-sm-6 col-md-4 p-2">
-                <div class="card h-100">
-                    <a href="#" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="p-3">
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ข้อที่ 6 -->
-            <div class="col-12 col-sm-6 col-md-4 p-2">
-                <div class="card h-100">
-                    <a href="#" class="warpper-card-img">
-                        <img class="card-img-top"
-                            src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="p-3">
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-
+            
         </div>
     </div>
 
